[gd_scene load_steps=9 format=3 uid="uid://cq3pvh4j3uvi"]

[ext_resource type="PackedScene" uid="uid://d1t0irvo1tq7i" path="res://Scenes/flight_mode/deer_missile.tscn" id="1_cr8ub"]
[ext_resource type="Script" uid="uid://be34k47obfqaj" path="res://Scenes/environment/snowman/test/snowman_test.gd" id="1_xkxt5"]
[ext_resource type="PackedScene" uid="uid://dnxusy2ufsi40" path="res://Scenes/environment/snowman/snowman.tscn" id="2_xkxt5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tslik"]
size = Vector3(100, 1, 100)

[sub_resource type="BoxMesh" id="BoxMesh_i110u"]
size = Vector3(100, 1, 100)

[sub_resource type="SphereMesh" id="SphereMesh_xkxt5"]
radius = 5.0
height = 10.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tslik"]
shading_mode = 0
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xkxt5"]
shading_mode = 0
albedo_color = Color(1, 0, 1, 1)

[node name="SnowmanTest" type="Node3D"]
script = ExtResource("1_xkxt5")

[node name="StaticBody3D2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.9659258, 0.25881904, 0, -0.25881904, 0.9659258, 0, -18.707413, -100)
collision_layer = 64
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D2"]
shape = SubResource("BoxShape3D_tslik")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D2"]
mesh = SubResource("BoxMesh_i110u")

[node name="DeerMissileStart" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.95371693, 0.3007058, 0, -0.3007058, 0.95371693, 0, -6.836822, -60.459316)

[node name="DeerMissile" parent="." instance=ExtResource("1_cr8ub")]
transform = Transform3D(1, 0, 0, 0, 0.95417243, 0.2992573, 0, -0.2992573, 0.95417243, 1.9073486e-06, -7.1311407, -59.807293)
collision_layer = 69
collision_mask = 65

[node name="SnowballContainer" type="Node3D" parent="."]

[node name="Snowman" parent="." node_paths=PackedStringArray("snowball_container") instance=ExtResource("2_xkxt5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.327, 300)
shot_delay = 2.0
snowball_container = NodePath("../SnowballContainer")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.70710677, -0.49999997, -0.49999997, 0, -0.7071068, 0.7071068, -0.7071068, -0.5, -0.5, 0, 38, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 59.173557, 12.738024, 127.24391)
projection = 1
current = true
size = 200.0

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="SPredPos" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_xkxt5")
surface_material_override/0 = SubResource("StandardMaterial3D_tslik")

[node name="DPredPos" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_xkxt5")
surface_material_override/0 = SubResource("StandardMaterial3D_xkxt5")

[node name="HSlider" type="HSlider" parent="."]
offset_left = 1130.0
offset_top = 19.0
offset_right = 1731.0
offset_bottom = 35.0
rotation = 3.1415927
min_value = 50.0
max_value = 500.0
value = 300.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
